# edgehog-device-runtime

./: .gitignore  Cargo.toml
.github/workflows/: check.yaml  e2e-test.yaml  reuse-lint.yaml  test.yaml
e2e-test-forwarder/: Cargo.toml
e2e-test-forwarder/src/: main.rs
edgehog-device-runtime-forwarder/: Cargo.toml
edgehog-device-runtime-forwarder/src/: astarte.rs  collection.rs  connection.rs  connections.rs  connections_manager.rs  lib.rs  messages.rs  test_utils.rs
edgehog-device-runtime-forwarder/src/connection/: http.rs  mod.rs  tcp.rs  websocket.rs
edgehog-device-runtime-forwarder/tests/: http_test.rs  ws_test.rs
hardware-id-service/: Cargo.toml
hardware-id-service/src/: main.rs
src/: error.rs  forwarder.rs  lib.rs
src/telemetry/: hardware_info.rs  net_if_properties.rs  system_info.rs  system_status.rs
