# Copyright 2023 SECO Mind Srl
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-forwarder"
version = "0.1.0"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
displaydoc = { workspace = true }
edgehog-device-forwarder-proto = { git = "https://github.com/rgallor/edgehog-device-forwarder-proto.git", branch = "rust-codegen" }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
httpmock = {workspace = true, optional = true}
prost = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = "0.3.17"
tungstenite = { workspace = true }
url = { workspace = true }

[dev-dependencies]
httpmock = {workspace = true}

[features]
_test-utils = ["dep:httpmock", "tokio/test-util"]
